# Five-day-line

./: main.py  pyproject.toml
src/app/: main.py
src/trading/data/: provider.py
src/trading/data/models/: bar.py  security.py
src/trading/data/providers/: akshare_provider.py
src/trading/visualization/: chart.py
tests/: test_akshare_provider.py
